--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Frisador</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&display=swap" rel="stylesheet"> 
     </head>
     <body>
-        <div class="container"></div>
+        <div class="content">
+            <h1>Frisador</h1>
+            <div class="upload">
+                <form>
+                    <label class="btn" for="imagem">Selecionar motivo (imagem)</label>
+                    <input type="file" name="imagem" id="imagem" accept="image/*">
+                </form>
+                <img id="img" src="">
+                <button class="btn">Gerar frisos</button>
+            </div>
+        </div>
         <script src="js/scripts.js"></script>
     </body>
 </html>
