Finalizando todos os frisos

--- a/index.html
+++ b/index.html
@@ -24,58 +24,58 @@
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso1')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img class="friso1">
+                        <img id="f1">
                     </div>
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso2')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img>
+                        <img id="f2">
                     </div>
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso3')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img>
+                        <img id="f3">
                     </div>
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso4')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img>
+                        <img id="f4">
                     </div>
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso5')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img>
+                        <img id="f5">
                     </div>
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso6')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img>
+                        <img id="f6">
                     </div>
                     <div class="friso">
                         <img>
                         <div class="buttons">
-                            <button class="btn">Ver friso</button>
+                            <button class="btn" onclick="frisar('friso7')">Ver friso</button>
                             <button class="btn">Download</button>
                         </div>
-                        <img>
+                        <img id="f7">
                     </div>
                     <button onclick="init()" class="btn">Voltar</button>
                 </div>
